changes to nasa and lemon

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </div>
     </header>
 
+    <!--as a designer, I want to be able to use technology to alleviate societal problems. I aspire to bridge function + aesthetic using my backgrounds in business + design-->
     <!-- END templateux-navbar -->
     <section class="templateux-hero">
       <div class="container">
@@ -229,8 +230,8 @@ The dots/circles -->
                 <div class="media-body">
                   <h3 class="h5"><font color="#DAA520">Visual Design</font></h3>
                   <p id="link2">I'm working on projects related to color, typography, sketching/drawing, and product design to complement my knowledge in product strategy.</p>
-                  <h3 class="h5"><font color="#DAA520">Web Development</font></h3>
-                  <p id="link2">I recently started doing freelance web development + rebranding. I enjoy making small businesses and brands feel more confident about their services or products.</p>
+                  <h3 class="h5"><font color="#DAA520">Web Development + Web Branding</font></h3>
+                  <p id="link2">I recently started doing freelance web development + rebranding. I enjoy making small businesses and brands feel more confident about their services or products.I have also included some web development experience from internships and independent studies.</p>
                 </div>
               </div>
             </div>
