--- a/nasanew.html
+++ b/nasanew.html
@@ -59,11 +59,21 @@
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-md-14">
+            <ul class="fixed">
+              <li class="fixed"><a class="active2" href="#overview">01 overview</a></li>
+              <li class="fixed"><a class="active2" href="#solution">02 solution</a></li>
+              <li class="fixed"><a class="active2" href="#approach">03 approach</a></li>
+              <li class="fixed"><a class="active2" href="#refelction">04 reflection</a></li>
+              <li class="fixed"><a class="active2" href="#links"><05 links</a></li>
+            </ul>
+          </div>
+          <div class="col-md-14">
+            <!--<p class="description1"><font color="#DAA520">01 overview&nbsp;&nbsp;&nbsp;&nbsp;02 solution&nbsp;&nbsp;&nbsp;&nbsp;03 approach&nbsp;&nbsp;&nbsp;&nbsp;04 future steps+reflection&nbsp;&nbsp;&nbsp;&nbsp;05 links</font></p>-->
             <p id="rowoverview2">01 Overview</p>
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
-                <p class="description1">Stephanie Webster (Design), Fernanda Moreno (SWE), Mihir Borkar (SWE), Derek Gubbens (SWE)</p>
+                <p class="description1"><a href="https://stephanieartdesign.wixsite.com/portfolio/about"><font color="#DAA520">Stephanie Webster (Design)</font></a>, Fernanda Moreno (SWE), Mihir Borkar (SWE), Derek Gubbens (SWE)</p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Time</span>
@@ -109,11 +119,11 @@
               <div class="col-md-6"></div>
               <div class="col-md-6">
                 <br>
-                  <p id="subheader">Shortcut action flow videos</p>
+                  <p id="subheader">shortcut action flow videos</p>
                   <p class="description1">There are common shortcuts astronauts use on board a mission. Our goal was to <b>reduce the time</b> required go through these actions through <b>buttons</b> and more <b>efficient action flows.</b></p>
               </div>
               <div class="col-md-6" id="pushdown2">
-                  <p class="description1" >Make copies</p>
+                  <p class="description1" >Make Copies</p>
                   <iframe width="500" height="255" src="https://www.youtube.com/embed/l6aGsVMrcuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <br>
                   <p class="description1" >Recurrence</p>
@@ -127,8 +137,8 @@
                 <hr id="pushdown">
                 <br>
                 <p id="rowoverview2">03 Approach</p>
-                 <p id="subheader">Initial Research</p>
-                 <p class="description1">A visual interpretation of Playbook: an iPad application used to create <b>convenience</b> and <b>independence</b> in editing mission activities.</p>
+                 <p id="subheader">initial research</p>
+                 <p class="description1">A <b>visual interpretation</b> of Playbook: an iPad application used to create <b>convenience</b> and <b>independence</b> in editing mission activities.</p>
                 <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/problemvisual2.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
               </div>
               <br></br>
@@ -138,7 +148,7 @@
               </div>
               <div class="col-md-12">
                   <br>
-                  <p id="subheader">Playbook Discovery Tree</p>
+                  <p id="subheader">playbook discovery tree</p>
                   <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual4.png" alt="Image placeholder" class="img-fluid" width="400%"></p>
               </div>
               <br></br>
@@ -153,7 +163,7 @@
               <br></br>
               <div class="col-md-6">
                 <br></br>
-                <p id="subheader"><b>System Design</b></p>
+                <p id="subheader"><b>system design</b></p>
                 <p class="description1">As I was playing around with the tester site, I noticed that it took a <b>considerable number of clicks</b> to commit to a certain action. I noticed this had a lot to do with the design of the Playbook system, specifically having an <b>action tray</b> - a tray that pops out when you need to make edits to the schedule.</p>
               </div>
               <div class="col-md-6">
@@ -165,7 +175,7 @@
               <br></br>
               <div class="col-md-6">
                 <br></br>
-                <p id="subheader">Shortcut Flows</p>
+                <p id="subheader">shortcut flows</p>
                   <p class="description1">There were <b>three shortcut flows</b> that I worked on: <b>Copy, Distribute</b> (later renamed Recurrence), and <b>Slice.</b> I also worked on making <b>multiselect</b> easier (changing multiple activities), which you can view in my Internship Final Presentation linked below.</p>
               </div>
               <div class="col-md-12">
@@ -173,54 +183,44 @@
                   <p class="text-center mb-4" id="uservisual"><img src="images/NASA/makecopies.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
-                  <p id="subheadervideo"><b>Recurrence</b></p>
+                  <p class="description1"><b>Recurrence</b></p>
                   <p class="text-center mb-4" id="uservisual"><img src="images/NASA/recurrence.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
-                <p id="subheadervideo"><b>Slice</b></p>
+                <p class="description1"><b>Slice</b></p>
                   <p class="text-center mb-4" id="uservisual"><img src="images/NASA/slice.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
                 <br>
-                <p id="subheader">Poster Presentation</p>
+                <p id="subheader">poster presentation</p>
                 <p class="description1">Poster from the NASA Intern Research Symposium (see links for the other project poster).
                 <embed src="images/NASA/playbook.pdf" width="1200" height="600" type="application/pdf">
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
-                <p id="rowoverview2">04 Future Steps + Reflection</p>
-                <p class="description1">Currently, the work is being implemented, so the future steps would be to ensure that everything is deployed successfully. The site is currently being worked on and the changes on Playbook are going to be implemented for the next NEEMO mission. This was my first UX internship and the first time I actually implemented my designs beyond the classroom. Therefore, there was a huge learning curve for me in terms of being able to work directly with software engineers on implementation in an Agile environment.  What I realized is that things often have to be spelled out or extremely pixel perfect and specified for a software engineer to carry out a design exactly as it is meant to be. Outside of improving my design skills, working with JIRA and understanding how to document interactions and specifications were some of the most valuable things I learned during this internship. </p>
-
-                This summer, I had the incredible opportunity to be a <b>UX Designer for the SPIFe (Scheduling and Planning System for Exploration) team at the NASA AMES Research Center</b>The team had a work process similar to that of a startup embedded within a larger organization. Over the summer, I grew my technical design knowledge and was able to learn how to work with software developers in an agile development environment.
-              </div>
-              <div class="col-md-12">
-                <hr id="pushdown">
                 <br></br>
+                <p id="rowoverview2">04 Future Steps + Reflection</p>
+                <p class="description1"> This past summer, I had the incredible opportunity to be a <b>UX Designer for the <a href="https://www.nasa.gov/centers/ames/orgs/exploration-tech/projects/spife.html"><font color="#DAA520">SPIFe team at the NASA AMES Research Center. </font></a></b>I absolutely loved working for the SPIFE team and enjoyed my time in Mountain View, California. The team had a work process similar to that of a startup embedded within a larger organization. Over the summer, I grew my <b>technical design knowledge</b> and was able to learn how to work with software developers in an <b>agile development environment.</b> Currently, my changes on Playbook are being implemented, so the future steps would be to ensure that everything is <b>deployed successfully for the next NEEMO mission.</b> This was my first UX internship and the first time I actually implemented my designs beyond the classroom, which was really exciting!</p>
+                <p class="text-center mb-4" id="uservisual"><img src="images/NASA/pics.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
+                <hr id="pushdown">
                 <p id="rowoverview2">05 Links</p>
                 <p class="description1"><a href="images/NASA/final.pdf"><font color="#DAA520">Final Internship Deck</font></a></p>
                 <p class="description1"><a href="images/NASA/hunch.pdf"><font color="#DAA520">NASA HUNCH Poster</font></a></p>
-              </div>
-              <div class="col-md-12">
-                <p id="rowoverview2">Pictures from the Summer</p>
               </div>
     <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 text-md-left text-center">
-            <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <div class="container text-center">
               <p align="left">Copyright 2018-2019 © Simran Jobanputra</p>
             </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
           </div>
         </div>
       </div>
     </footer>
-
   <script src="js/scripts-all.js"></script>
   <script src="js/main.js"></script>
-
   </body>
 </html>
