--- a/newlemon.html
+++ b/newlemon.html
@@ -60,7 +60,6 @@
         <div class="row justify-content-center">
           <div class="col-md-14">
             <p id="rowoverview2">01 Overview</p>
-            <p id="subheader">Quick Summary</p>
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
@@ -81,16 +80,24 @@
               <br></br>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Ask</span>
-                <p class="description1">Come up with an innovative digital service for your assigned problem space.</p>
+                <p class="description1">Come up with an innovative digital service for any problem space.</p>
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
-                <p class="description1">This project was part of my Digital Service Innovation class. We were <b>individually tasked</b> with coming up with <b>digital services to tackle current problems.</b> Students were given the opportunity to <b>vote</b> for the ideas that they were most interested in and thus teams were formed to work on the top ideas. The end of the class culminated in an <b>investor pitch and valuation by local Pittsburgh leaders</b>, which served as an invaluable learning experience. For my selected project, I served as a <b>Project Lead</b> - guiding the strategic decisions that my team took. My team focused on the <b>food waste</b> problem.</p>
+                <p class="description1">This project was part of my Digital Service Innovation class. We were <b>individually tasked</b> with coming up with <b>digital services to tackle current problems and voted on the top ideas to form teams.</b> For my selected project, I served as a <b>Project Lead</b> - guiding the strategic decisions that my team took. My team focused on the <b>food waste</b> problem.</p>
+              </div>
+              <div class="col-md-8">
+                <span class=caption id="rowoverview">Impact</span>
+                <p class="description1">This class culminated in an investor pitch and valuation by local Pittsburgh leaders. Our team placed third in the pitch competition!</p>
+              </div>
+              <div class="col-md-12">
+                <hr id="pushdown">
               </div>
             </div>
             <!--section 2-->
              <div class="row mb-5">
               <div class="col-md-12">
+
                 <p id="rowoverview2">02 Solution</p>
                   <p class="description1">
                     <b>Introducting Lemon.</b><br></br> A mobile application that tackles personal waste with just one picture of your grocery receipt!</p>
@@ -99,10 +106,13 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FMck9GJM3H0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="description1">
                   <br>
-
                 </p>
                 <br>
-                <a href="newlemon.html#concept"><img src="images/lemon/conceptbutton.png" alt="Image placeholder" width="30%"></a>
+                <!--<a href="newlemon.html#concept"><img src="images/lemon/conceptbutton.png" alt="Image placeholder" width="30%"></a>-->
+              </div>
+              <div class="col-md-12">
+                <p id="subheader">mobile screen flow</p>
+                <img src="images/lemon/screendesign.png" alt="Image placeholder" width="100%"><br></br><br>
               </div>
               <!--section 3-->
               <div class="col-md-6">
