added screens and changed order of things

--- a/nasanew.html
+++ b/nasanew.html
@@ -119,7 +119,7 @@
               <div class="col-md-6"></div>
               <div class="col-md-6">
                 <br>
-                  <p id="subheader">shortcut action flow videos</p>
+                  <p id="subheader"><b>shortcut action flow videos</b></p>
                   <p class="description1">There are common shortcuts astronauts use on board a mission. Our goal was to <b>reduce the time</b> required go through these actions through <b>buttons</b> and more <b>efficient action flows.</b></p>
               </div>
               <div class="col-md-6" id="pushdown2">
@@ -137,7 +137,7 @@
                 <hr id="pushdown">
                 <br>
                 <p id="rowoverview2">03 Approach</p>
-                 <p id="subheader">initial research</p>
+                 <p id="subheader"><b>initial research</b></p>
                  <p class="description1">A <b>visual interpretation</b> of Playbook: an iPad application used to create <b>convenience</b> and <b>independence</b> in editing mission activities.</p>
                 <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/problemvisual2.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
               </div>
@@ -148,7 +148,7 @@
               </div>
               <div class="col-md-12">
                   <br>
-                  <p id="subheader">playbook discovery tree</p>
+                  <p id="subheader"><b>playbook discovery tree</b></p>
                   <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual4.png" alt="Image placeholder" class="img-fluid" width="400%"></p>
               </div>
               <br></br>
@@ -175,7 +175,7 @@
               <br></br>
               <div class="col-md-6">
                 <br></br>
-                <p id="subheader">shortcut flows</p>
+                <p id="subheader"><b>shortcut flows</b></p>
                   <p class="description1">There were <b>three shortcut flows</b> that I worked on: <b>Copy, Distribute</b> (later renamed Recurrence), and <b>Slice.</b> I also worked on making <b>multiselect</b> easier (changing multiple activities), which you can view in my Internship Final Presentation linked below.</p>
               </div>
               <div class="col-md-12">
