--- a/newlemon.html
+++ b/newlemon.html
@@ -97,7 +97,6 @@
             <!--section 2-->
              <div class="row mb-5">
               <div class="col-md-12">
-
                 <p id="rowoverview2">02 Solution</p>
                   <p class="description1">
                     <b>Introducting Lemon.</b><br></br> A mobile application that tackles personal waste with just one picture of your grocery receipt!</p>
@@ -117,7 +116,8 @@
               <!--section 3-->
               <div class="col-md-6">
                 <br></br>
-                <p id="rowoverview2">03 Problem Discovery</p>
+                <hr id="pushdown">
+                <p id="rowoverview2">03 Approach</p>
                 <p class="description1">Today, food waste is an important problem. It has a <b>major financial impact, impacts food security, and affects the climate and resource conservation.</b><br></br><br></br>Food that could be used to feed hungry families is instead sent to landfills, eventually adding up to <b>8% of global greenhouse gas emissions.</b></p>
               </div>
               <div class="col-md-6">
@@ -237,7 +237,7 @@
               </div>
               <div class="col-md-12">
                 <br></br>
-                <img src="images/lemon/screendesign.png" alt="Image placeholder" width="100%"><br></br><br>
+                <img src="images/lemon/screens.png" alt="Image placeholder" width="90%"><br></br><br>
               </div>
               <div class="col-md-12">
                 <p id="rowoverview2">09 Demo Day Pitch + Analysis</p>
