changes to lemon

--- a/newlemon.html
+++ b/newlemon.html
@@ -96,12 +96,12 @@
             </div>
             <!--section 2-->
              <div class="row mb-5">
-              <div class="col-md-12">
+              <div class="col-md-6">
                 <p id="rowoverview2">02 Solution</p>
                   <p class="description1">
-                    <b>Introducting Lemon.</b><br></br> A mobile application that tackles personal waste with just one picture of your grocery receipt!</p>
+                    <b>Introducing Lemon.</b><br></br><br>A mobile application that tackles personal waste with just one picture of your grocery receipt! Lemon has<b> three key features:</b><br></br>01 food tracking<br></br>02 repurposing ideas<br></br>03 smarter shopping</p>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-6">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FMck9GJM3H0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="description1">
                   <br>
@@ -113,10 +113,15 @@
                 <p id="subheader">mobile screen flow</p>
                 <img src="images/lemon/screendesign.png" alt="Image placeholder" width="100%"><br></br><br>
               </div>
-              <!--section 3-->
+              <div class="col-md-12">
+                <p id="subheader">concept poster</p>
+                 <img id="centering" src="images/lemon/teamposter.png" alt="Image placeholder" width="60%"><br>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
               <div class="col-md-6">
                 <br></br>
-                <hr id="pushdown">
+
                 <p id="rowoverview2">03 Approach</p>
                 <p class="description1">Today, food waste is an important problem. It has a <b>major financial impact, impacts food security, and affects the climate and resource conservation.</b><br></br><br></br>Food that could be used to feed hungry families is instead sent to landfills, eventually adding up to <b>8% of global greenhouse gas emissions.</b></p>
               </div>
