changes to lemon

--- a/newlemon.html
+++ b/newlemon.html
@@ -88,7 +88,7 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Impact</span>
-                <p class="description1">This class culminated in an investor pitch and valuation by local Pittsburgh leaders. Our team placed third in the pitch competition!</p>
+                <p class="description1">This class culminated in an investor pitch and valuation by local Pittsburgh leaders. Our team <b>placed third</b> in the pitch competition!</p>
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
@@ -98,11 +98,12 @@
              <div class="row mb-5">
               <div class="col-md-6">
                 <p id="rowoverview2">02 Solution</p>
+                  <p id="subheader"><b>introducing lemon</b></p>
                   <p class="description1">
-                    <b>Introducing Lemon.</b><br></br><br>A mobile application that tackles personal waste with just one picture of your grocery receipt! Lemon has<b> three key features:</b><br></br>01 food tracking<br></br>02 repurposing ideas<br></br>03 smarter shopping</p>
+                    A mobile application that tackles personal waste with just one picture of your grocery receipt! Lemon has<b> three key features:</b><br></br><b>01</b> food tracking<br></br><b>02</b> repurposing ideas<br></br><b>03</b> smarter shopping</p>
               </div>
               <div class="col-md-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FMck9GJM3H0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" id="moveit" src="https://www.youtube.com/embed/FMck9GJM3H0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="description1">
                   <br>
                 </p>
@@ -110,28 +111,41 @@
                 <!--<a href="newlemon.html#concept"><img src="images/lemon/conceptbutton.png" alt="Image placeholder" width="30%"></a>-->
               </div>
               <div class="col-md-12">
-                <p id="subheader">mobile screen flow</p>
+                <p id="subheader"><b>mobile screen flow</b></p>
                 <img src="images/lemon/screendesign.png" alt="Image placeholder" width="100%"><br></br><br>
               </div>
               <div class="col-md-12">
-                <p id="subheader">concept poster</p>
+                <p id="subheader"><b>concept poster</b></p>
                  <img id="centering" src="images/lemon/teamposter.png" alt="Image placeholder" width="60%"><br>
+              </div>
+              <div class="col-md-6">
+                <br>
+                <p id="subheader"><b>app walkthrough</b></p>
+                <br>
+                <img src="images/lemon/screen2.png" alt="Image placeholder" width="70%"><br>
+              </div>
+              <div class="col-md-6">
+                <br>
+                <iframe width="600" height="470" id="moveit" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+
               <div class="col-md-12">
                 <hr id="pushdown">
               </div>
               <div class="col-md-6">
-                <br></br>
-
+                <br>
                 <p id="rowoverview2">03 Approach</p>
+                <p id="subheader"><b>gathering food waste statistics</b></p>
                 <p class="description1">Today, food waste is an important problem. It has a <b>major financial impact, impacts food security, and affects the climate and resource conservation.</b><br></br><br></br>Food that could be used to feed hungry families is instead sent to landfills, eventually adding up to <b>8% of global greenhouse gas emissions.</b></p>
               </div>
               <div class="col-md-6">
+                <br>
                 <img  id="facts" src="images/lemon/facts.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-6">
                 <br>
-                <p id="subheader">Restaurant Interviews</p>
-                <p class="description1">We first started by trying to <b>reducing waste from a restaurant's perspective.</b> A lot of applications are out on the market that focus on this problem - specifically trying to help <b>restaurants give away leftovers</b> at the end of the day.</p>
+                <p id="subheader"><b>restaurant interviews</b></p>
+                <p class="description1">We first started by trying to <b>reducing waste from a restaurant's perspective.</b> A lot of apps focus on trying to help <b>restaurants give away EOD leftovers.</b></p>
                 <img  src="images/lemon/restaurants.png" alt="Image placeholder" width="90%">
                 <br></br>
                 <p class="description1">Before going into interviews, our team did a <b>reverse assumptions</b> exercise to come at the food waste problem from a fresher perspective.</p>
@@ -234,9 +248,7 @@
                 <p id="rowoverview2">08 Final Concept</p>
                 <p class="description1">The final concept is a simple digital service tracks food and prevents waste through scanning your grocery receipts. Specifically it can:<br>01 give reminders to check on produce/track spoilage data<br>02 recommend grocery proportions for the future<br>03 give repurposing ideas (DIY cleaners)</p><br>
               </div>
-              <div class="col-md-6">
-                <img src="images/lemon/teamposter.png" alt="Image placeholder" width="80%"><br>
-              </div>
+
               <div class="col-md-6">
                 <iframe width="500" height="280" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
